Updating ParcelUsageStagingSimpleDto to contain both annual and monthly usage sums; Some general code cleanup (updating return types & function names, etc.)
