# Rio.API/swagger.json
@@ -2207,20 +2207,60 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/ParcelUsageStagingDto"
+                  "$ref": "#/components/schemas/ParcelUsageStagingPreviewDto"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ParcelUsageStagingDto"
+                  "$ref": "#/components/schemas/ParcelUsageStagingPreviewDto"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ParcelUsageStagingDto"
+                  "$ref": "#/components/schemas/ParcelUsageStagingPreviewDto"
                 }
               }
             }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "ParcelUsage"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "ParcelUsage"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
           }
         }
       }
@@ -2334,7 +2374,33 @@
         },
         "responses": {
           "200": {
-            "description": "Success"
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -5460,15 +5526,36 @@
         },
         "additionalProperties": false
       },
-      "ParcelUsageStagingDto": {
+      "ParcelUsageStagingPreviewDto": {
+        "type": "object",
+        "properties": {
+          "StagedParcelUsages": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ParcelUsageStagingSimpleDto"
+            },
+            "nullable": true
+          },
+          "ParcelNumbersWithoutStagedUsages": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "ParcelUsageStagingSimpleDto": {
         "type": "object",
         "properties": {
           "ParcelUsageStagingID": {
             "type": "integer",
             "format": "int32"
           },
-          "Parcel": {
-            "$ref": "#/components/schemas/ParcelDto"
+          "ParcelID": {
+            "type": "integer",
+            "format": "int32"
           },
           "ParcelNumber": {
             "type": "string",
@@ -5484,12 +5571,35 @@
           },
           "ReportedValueInAcreFeet": {
             "type": "number",
-            "format": "double",
-            "nullable": true
+            "format": "double"
           },
           "LastUpdateDate": {
             "type": "string",
             "format": "date-time"
+          },
+          "UploadedFileName": {
+            "type": "string",
+            "nullable": true
+          },
+          "UserID": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "ExistingAnnualUsageAmount": {
+            "type": "number",
+            "format": "double"
+          },
+          "ExistingMonthlyUsageAmount": {
+            "type": "number",
+            "format": "double"
+          },
+          "UpdatedAnnualUsageAmount": {
+            "type": "number",
+            "format": "double"
+          },
+          "UpdatedMonthlyUsageAmount": {
+            "type": "number",
+            "format": "double"
           }
         },
         "additionalProperties": false
