# Rio.EFModels/Entities/ExtensionMethods/ParcelUsageStagingExtensionMethods.cs
@@ -7,12 +7,18 @@ public static partial class ParcelUsageStagingExtensionMethods
 {
     static partial void DoCustomSimpleDtoMappings(ParcelUsageStaging parcelUsageStaging, ParcelUsageStagingSimpleDto parcelUsageStagingSimpleDto)
     {
-        var usageToDate = parcelUsageStaging.Parcel.ParcelLedgers
-            .Where(x => x.TransactionTypeID == (int)TransactionTypeEnum.Usage)
-            .Sum(x => x.TransactionAmount);
+        var usagesForWaterYear = parcelUsageStaging.Parcel.ParcelLedgers
+            .Where(x => x.TransactionTypeID == (int)TransactionTypeEnum.Usage && x.WaterYear == parcelUsageStaging.ReportedDate.Year).ToList();
+        var usagesForWaterMonth = usagesForWaterYear.Where(x => x.WaterMonth == parcelUsageStaging.ReportedDate.Month);
 
-        parcelUsageStagingSimpleDto.ExistingUsageToDate = usageToDate;
-        parcelUsageStagingSimpleDto.UpdatedUsageToDate = usageToDate + parcelUsageStaging.ReportedValueInAcreFeet;
+        var existingAnnualUsageAmount = usagesForWaterYear.Sum(x => x.TransactionAmount);
+        var existingMonthlyUsageAmount = usagesForWaterMonth.Sum(x => x.TransactionAmount);
+
+        parcelUsageStagingSimpleDto.ExistingAnnualUsageAmount = existingAnnualUsageAmount;
+        parcelUsageStagingSimpleDto.ExistingMonthlyUsageAmount = existingMonthlyUsageAmount;
+
+        parcelUsageStagingSimpleDto.UpdatedAnnualUsageAmount = existingAnnualUsageAmount + parcelUsageStaging.ReportedValueInAcreFeet;
+        parcelUsageStagingSimpleDto.UpdatedMonthlyUsageAmount = existingMonthlyUsageAmount + parcelUsageStaging.ReportedValueInAcreFeet;
+
     }
-
 }
