# Rio.Models/DataTransferObjects/ParcelUsageStagingSimpleDto.cs
@@ -2,6 +2,8 @@ namespace Rio.Models.DataTransferObjects;
 
 public partial class ParcelUsageStagingSimpleDto
 {
-    public decimal ExistingUsageToDate { get; set; }
-    public decimal UpdatedUsageToDate { get; set; }
+    public decimal ExistingAnnualUsageAmount { get; set; }
+    public decimal ExistingMonthlyUsageAmount { get; set; }
+    public decimal UpdatedAnnualUsageAmount { get; set; }
+    public decimal UpdatedMonthlyUsageAmount { get; set; }
 }
